--- a/web_backend/src/web_backend.Blazor.Client/App.razor
+++ b/web_backend/src/web_backend.Blazor.Client/App.razor
@@ -1,15 +1,35 @@
+@using Volo.Abp.AspNetCore.Components.Web.BasicTheme.Themes.Basic
+@using web_backend.Blazor.Client.Services
 @using Microsoft.AspNetCore.Components.Authorization
-@using Microsoft.AspNetCore.Components.Routing
-@using web_backend.Blazor.Client.Pages
 
 <CascadingAuthenticationState>
     <Router AppAssembly="@typeof(Program).Assembly">
         <Found Context="routeData">
-            <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
-            <FocusOnNavigate RouteData="@routeData" Selector="h1" />
+            <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)">
+                <NotAuthorized Context="notAuthorizedContext">
+                    @if (!notAuthorizedContext.User.Identity?.IsAuthenticated ?? true)
+                    {
+                        <Volo.Abp.AspNetCore.Components.Web.BasicTheme.Themes.Basic.RedirectToLogin />
+                    }
+                    else
+                    {
+                        <div class="alert alert-danger">
+                            <h4>Not Authorized</h4>
+                            <p>You are not authorized to access this resource.</p>
+                        </div>
+                    }
+                </NotAuthorized>
+                <Authorizing>
+                    <div class="text-center py-5">
+                        <div class="spinner-border" role="status">
+                            <span class="visually-hidden">Loading...</span>
+                        </div>
+                        <p class="mt-3">Authorizing...</p>
+                    </div>
+                </Authorizing>
+            </AuthorizeRouteView>
         </Found>
         <NotFound>
-            <PageTitle>Not Found</PageTitle>
             <LayoutView Layout="@typeof(MainLayout)">
                 <div class="alert alert-warning">
                     <h3>Page Not Found</h3>
