--- a/web_backend/src/web_backend.Blazor.Client/Pages/RedirectToLogin.razor
+++ b/web_backend/src/web_backend.Blazor.Client/Pages/RedirectToLogin.razor
@@ -1,8 +1,26 @@
 @inject NavigationManager Navigation
+@inject HttpClient HttpClient
+@using System.Configuration
 
 @code {
     protected override void OnInitialized()
     {
-        Navigation.NavigateTo($"/authentication/login?returnUrl={Uri.EscapeDataString(Navigation.Uri)}");
+        // Determine the API base URL
+        var apiBaseUrl = DetermineApiBaseUrl();
+        
+        var currentUri = Navigation.Uri;
+        var returnUrl = Uri.EscapeDataString(currentUri);
+        
+        // Navigate to the login page on the API server
+        var loginUrl = $"{apiBaseUrl}/Account/Login?returnUrl={returnUrl}";
+        
+        // Use forceLoad to ensure browser navigation
+        Navigation.NavigateTo(loginUrl, forceLoad: true);
+    }
+    
+    private string DetermineApiBaseUrl()
+    {
+        // This should be the URL of your HttpApi.Host project where the authentication pages are hosted
+        return "https://vss-backend-api-fmbjgachhph9byce.westus2-01.azurewebsites.net";
     }
 }
