--- a/web_backend/src/web_backend.Blazor.Client/Pages/Authentication/LoginStatus.razor
+++ b/web_backend/src/web_backend.Blazor.Client/Pages/Authentication/LoginStatus.razor
@@ -19,7 +19,7 @@
     </Authorized>
     <NotAuthorized>
         <div class="d-flex">
-            <a href="@($"/Account/Login?returnUrl={Uri.EscapeDataString(Navigation.Uri)}")" class="btn btn-outline-light btn-sm me-2">
+            <a href="/Account/Login" class="btn btn-outline-light btn-sm me-2">
                 <i class="bi bi-box-arrow-in-right me-1"></i> Login
             </a>
             <a href="/Account/Register" class="btn btn-light btn-sm">
