--- a/web_backend/src/web_backend.Blazor.Client/Pages/Authentication/LoginStatus.razor
+++ b/web_backend/src/web_backend.Blazor.Client/Pages/Authentication/LoginStatus.razor
@@ -1,6 +1,7 @@
 @using Microsoft.AspNetCore.Components.Authorization
 @using System.Security.Claims
 @using web_backend.Blazor.Client.Services
+@namespace web_backend.Blazor.Client.Pages.Authentication
 
 @inject AuthenticationStateProvider AuthStateProvider
 @inject NavigationManager Navigation
